# react-native-patchql

./: .gitignore  .gitmodules  App.js  README.md  create-ndk-standalone.sh  package-lock.json  package.json
android/: build.gradle
rust/: Cargo.toml
rust/mobile_app/: Cargo.toml
rust/mobile_app/src/: android.rs
