[package]
name = "mobile_app"
version = "0.1.0"
authors = ["terra", "thecallsign", "eternaldeiwos"]

[lib]
name = "mobile_app"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = ">=0.2.35"
jni = { version = ">=0.12.2", optional = true, default-features = false }

[dev-dependencies]
cargo-lipo = ">=1.0.3"

[features]
default = ["jni"]
